        These functions break the connectivity calculations.
        So they are temporary disabled (see my comments in these functions)
    bug fix in Marque_Une_Piste(): the last segments created can be see as part of the flagged track:
        so delete track (or edit track width) deletes the track and some others segments (last created)

    
2009-Feb-25 UPDATE Wayne Stambaugh <stambaughw@verizon.net>
================================================================================
++EESchema
  * Fixed hot key bug that caused undo and redo events in the library editor
    to be passed to the schematic frame.  Fixes bug #1896790.
  * Fixed hot key bug that allowed new wire to be placed during block move
    causing a manage cursor message box to pop up.
  * Fixed hot key bug that allows an object in block to be deleted during
    a move or drag operation.


2009-Feb-25 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
++pcbnew
  * Markers were not shown when on top of a high-lighted pad.  Moved highlight
    drawing function into class BOARD and out of Frame.  Call BOARD::DrawHighLight() from
    within BOARD::Draw() to fix.
  * Gerbers were not generated if you had EDGE_MODULEs on a copper layer, such as in
    a MuWaveBasicShape.  The line thickness was not being put into the gerber via a DCODE.
    These gerber files were bad, and geda gerbv would also complain.
  * A few window titles were not conformant with UIpolicies.txt.
  * You could not load a *.pro file from another project into PCBNEW if your current
    project had none.  Changed wildcard mask.
  * Deleted gen_self.h and moved that code into muonde.cpp


2009-Feb-24 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
++pcbnew
  * dialog boxes calling OnInitDialog are flashing because these functions